# Charmageddon

./: Bonus.hpp  GameState.cpp  GameState.hpp  InteractableObject.cpp  Map.cpp  Map.hpp  Menu.cpp  Menu.h  Menu.hpp  Obstacle.hpp  Player.cpp  README.md  car.cpp  car.h  contak.cpp  contak.h  main.cpp  map.cpp  map.h  menu.cpp  menu.h  menu.hpp  player.cpp  player.h  score.cpp  score.h
Charmageddon/: CMakeLists.txt  GameState.cpp  GameState.hpp  InteractableObject.cpp  InteractableObject.hpp  Map.hpp  Menu.cpp  Menu.h  Menu.hpp  Player.hpp  main.cpp
Charmageddon_1/: Bonus.cpp  Bonus.hpp  CMakeLists.txt  GameState.cpp  GameState.hpp  InteractableObject.cpp  InteractableObject.hpp  Map.cpp  Map.hpp  Menu.cpp  Menu.hpp  Obstacle.cpp  Obstacle.hpp  Player.cpp  Player.hpp  main.cpp  record.txt
Charmageddon_prova/: Bonus.cpp  Bonus.hpp  GameState.cpp  GameState.hpp  InteractableObject.cpp  InteractableObject.hpp  Menu.cpp  Obstacle.cpp  Obstacle.hpp  Player.cpp  Player.hpp  errori.txt  main.cpp
GAME_MAIN/: Bonus.cpp  Bonus.hpp  GameState.cpp  GameState.hpp  InteractableObject.cpp  InteractableObject.hpp  Menu.cpp  Obstacle.cpp  Obstacle.hpp  Player.cpp  Player.hpp  StrutturaGioco.txt  main.cpp
NuovoMenu/: Menu.cpp  Menu.hpp
classi mappa e macchina/: car1.cpp  car1.hpp  map.cpp  map.hpp
gioco3.0/: Bonus.cpp  Bonus.hpp  CMakeLists.txt  GameState.cpp  GameState.hpp  InteractableObject.cpp  InteractableObject.hpp  Map.cpp  Map.hpp  Menu.cpp  Obstacle.cpp  Obstacle.hpp  Player.cpp  Player.hpp  main.cpp
